--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html ,body{
     gap: 40px;
     padding:  0 150px;
     position: fixed;
-    z-index: 99;
+    z-index: 999999;
 }
 #nav a{
     text-decoration: none;
@@ -72,7 +72,7 @@ video{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #000;
     flex-direction: column;
     text-align: center;
     z-index: 10 ;
@@ -108,4 +108,79 @@ video{
     height: 100vh;
     width: 100%;
     z-index: 12;
+}
+#scroller {
+    white-space: nowrap;
+    overflow-x: auto ;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 99;
+    
+}
+
+
+#scroller h4{
+    display: inline-block;
+    white-space: nowrap;
+    font-size: 140px;
+    font-weight: 900;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    -webkit-text-stroke: 2px rgb(0, 255, 213);
+    color: transparent;
+    margin-right: 10px;
+    transition: 0.6s ease-in-out;
+
+}
+#scroller h4:hover{
+    color: rgb(0, 255, 213) ;
+}
+#scroll-in{
+    white-space: nowrap;
+    display: inline-block;
+    animation: scroll 35s linear  infinite  ;
+}
+#scroller::-webkit-scrollbar{
+    display: none;
+}
+
+
+@keyframes scroll {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
+#aboutme{
+    height: 70vh;
+    width: 100%;
+    margin-top: -400px;
+    z-index: 20;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    padding: 0 50px;
+    color: white;
+    position: relative;
+}
+#aboutme img{
+        height: 220px;
+        width: 220px;
+        border-radius: 20px;
+        object-fit: cover;
+        position: relative;
+        
+}
+#aboutmein{
+    width: 50%;
+    align-items: center;
+    text-align: center;
+
+}
+#aboutmein h3{
+    font-weight: 900;
+}
+#aboutmein p{
+    line-height: 15px;
 }
