--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ video{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #000;
+    color: #fff;
     flex-direction: column;
     text-align: center;
     z-index: 10 ;
