--- a/style.css
+++ b/style.css
@@ -10,18 +10,9 @@
 html ,body{
     height: 100%;
     width: 100%;
+    background-color: #000;
+}
 
-}
-#cursor{
-    height: 25px;
-    width: 25px;
-    background-color: rgb(0, 255, 213);
-    
-    border-radius: 50%;
-    
-    z-index: 99;
-    position: fixed;
-}
 #cursor-blur{
     height: 250px;
     width: 250px;
@@ -78,6 +69,59 @@ video{
     z-index: 10 ;
     
 }
+#containers{
+    z-index: -2;
+   
+    height: 50px;
+}
+.cont{
+    position: relative;
+    filter: blur(3px);
+    background-color: blue;
+    border-radius: 50%;
+    
+    
+    
+}
+#cont0{
+    width: 100px;
+    height: 100px;
+    top:-220px;
+    left:-150px;
+    background-color: rgb(0, 255, 213);
+
+}
+#cont1{
+    width: 50px;
+    height: 50px;
+    top: 50px;
+    left: -400px;
+    background-color: rgb(0, 255, 213);
+}
+#cont2{
+    
+    width: 40px;
+    height: 40px;
+    top: 200px;
+    left: 10px;
+    background-color: rgb(0, 255, 213);
+}
+#cont3{
+    width: 40px;
+    height: 40px;
+    
+    top: -50px;
+    left: 400px;
+    background-color: rgb(0, 255, 213);
+}
+#cont4{
+    width: 80px;
+    height: 80px;
+    
+    top: -10px;
+    left: 100px;
+background-color: rgb(0, 255, 213);
+}
 #page1 h1{
     font-size: 60px;
     font-weight: 900;
@@ -105,7 +149,7 @@ video{
     width: 40%;
 }
 #page2{
-    height: 100vh;
+    height: 50vh;
     width: 100%;
     z-index: 12;
 }
@@ -172,15 +216,209 @@ video{
         position: relative;
         
 }
-#aboutmein{
-    width: 50%;
+
+
+
+#page3{
+    background-color: transparent;
+    width: 100%;
+    height: 100vh;
+    padding: 0vh 15vh;
     align-items: center;
+    position: relative;
+    justify-content: center;
     text-align: center;
+    color: #fff;
+    
+    
+}
+#aboutme{
+    display: flex;
+    top: 350px;
+    gap: 10px;
+    
+    
+}
+.cards{
+    width: 250px;
+    text-align:left;
+    position: relative;
+    background-color: white;
+    height: 300px;
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    z-index: 101;
+    transition: 0.4s ease-in-out;
+    
+}
+#card1{
+    background-image: url(images/pexels-ayna-18097907.jpg);
+    
+}
+
+#card2{
+    background-image: url(images/pexels-dibakar-roy-13742915.jpg);
 
 }
-#aboutmein h3{
-    font-weight: 900;
+#card3{
+    background-image: url(images/pexels-luke-miller-19068893.jpg);
 }
-#aboutmein p{
-    line-height: 15px;
+.overlay{
+    height: 100%;
+    width: 100%;
+    color: black;
+    background-color: rgb(0, 255, 213);
+    padding: 30px;
+    padding-top: 10px;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+    
 }
+
+.overlay:hover{
+    opacity: 100;
+    
+}
+.overlay h4{
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.cards:hover .displa{
+    display: none;
+    
+}
+.cards:hover{
+    width: 50%;
+    height: 50%;
+}
+.overlay p{
+    font-size: 15px;
+}
+
+#page4{
+   
+    width: 100%;
+    height: 200vh;
+    padding: 0vh 15vh;
+    align-items: center;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+    
+    
+}
+#aboutmyclg{
+    height: 100vh;
+    width: 100%;
+    margin-top: -400px;
+    z-index: 20;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 50px;
+    color: black;
+    position: relative;
+}
+#anime {
+    width: 100%;
+    height: 90vh;
+    
+
+    
+}
+#anime img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+    position: static;
+    
+}
+
+#aboutmyclg img{
+        height: 220px;
+        width: 220px;
+        border-radius: 20px;
+        object-fit: cover;
+        position: relative;
+        
+}
+#aboutmyclg{
+    display: flex;
+    top: 350px;
+    gap: 10px;
+    
+    
+}
+.cardsclg{
+    width: 250px;
+    text-align:left;
+    position: relative;
+    background-color: white;
+    height: 300px;
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    z-index: 101;
+    transition: 0.4s ease-in-out;
+    
+}
+#cardclg1{
+    background-image: url(images/pexels-ayna-18097907.jpg);
+    transition: 0.3s ease-in-out;
+    
+}
+
+#cardclg2{
+    background-image: url(images/pexels-dibakar-roy-13742915.jpg);
+
+}
+#cardclg3{
+    background-image: url(images/pexels-luke-miller-19068893.jpg);
+}
+.overlayclg{
+    height: 100%;
+    width: 100%;
+    color: black;
+    background-color: rgb(0, 255, 213);
+    padding: 30px;
+    padding-top: 10px;
+    opacity: 0;
+    transition: 0.4s ease-in-out;
+    
+}
+.overlayclg:hover{
+    opacity: 1;   
+}
+.cardsclg:hover .displa{
+    display: none;
+}
+.cardsclg:hover{
+    width: 50%;
+    height: 50%;
+}
+.overlayclg h4{
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.overlayclg p{
+    font-size: 15px;
+}
+#h2tag{
+    text-align: center;
+}
+#h2tag h2{
+    color: #fff;
+    background-color: #000;
+    margin-bottom: 20px;
+    
+}
+
+
+
