--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ background-color: rgb(0, 255, 213);
 }
 .cardsclg:hover{
     width: 50%;
-    height: 50%;
+    height: 40%;
 }
 .overlayclg h4{
     font-size: 40px;
@@ -418,6 +418,37 @@ background-color: rgb(0, 255, 213);
     background-color: #000;
     margin-bottom: 20px;
     
+}
+.rating{
+    width: 350px;
+    height: 100px;
+    border-radius: 10px;
+    
+    position: relative;
+    top: 230px;
+    left: 400px;
+    
+    justify-content: space-between;
+}
+.rating:hover  .star{
+    width: 370px;
+    height: 120px;
+}
+.stars{
+    display: flex;
+    justify-content: space-around;
+}
+.star{
+    clip-path: polygon(50% 0, 67% 27%, 98% 35%, 74% 55%, 79% 91%, 50% 70%, 21% 91%, 26% 58%, 2% 35%, 36% 26%);;
+    background-color: yellow;
+    filter: drop-shadow(0 10px yellow);
+    width: 50px;
+    height: 50px;
+}
+#page5{
+    width: 100%;
+    height: 100vh;
+    background-color: pink;
 }
 
 
