--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ video{
     
 }
 #containers{
-    z-index: -2;
+    z-index: -100000;
    
     height: 50px;
 }
@@ -147,6 +147,95 @@ background-color: rgb(0, 255, 213);
     font-size: 15px;
     font-weight: 500;
     width: 40%;
+}
+
+#icons{
+    width: 200px;
+    height: 20px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    position: relative;
+    top: 100px;
+    left: 500px;
+}
+#icons a{
+    text-decoration: none;
+    color: #fff;
+    
+}
+#insta{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border-style: solid;
+    border-color: aqua;
+    transition: 0.3s ease-in-out;
+}
+#insta a{
+    position: relative;
+    top: 10px;
+    left:1px;
+    border-radius: 10px;
+    
+}
+#insta:hover{
+    background-color: aqua;
+    border-style: solid;
+    
+    color: black;
+}
+#insta:hover i{
+    color: #000;
+}
+#twitter{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border-style: solid;
+    border-color: aqua;
+    transition: 0.3s ease-in-out;
+}
+#twitter a{
+    position: relative;
+    top: 10px;
+    left:1px;
+    border-radius: 10px;
+    
+}
+#twitter:hover{
+    background-color: aqua;
+    border-style: solid;
+    
+    color: black;
+}
+#twitter:hover a{
+    color: #000;
+}
+#linkedin:hover{
+    background-color: aqua;
+    border-style: solid;
+    
+    color: black;
+}
+#linkedin:hover a{
+    color: #000;
+}
+#linkedin{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border-style: solid;
+    border-color: aqua;
+    transition: 0.3s ease-in-out;
+}
+#linkedin a{
+    position: relative;
+    top: 10px;
+    left:1px;
+    border-radius: 10px;
+    
 }
 #page2{
     height: 50vh;
@@ -448,7 +537,7 @@ background-color: rgb(0, 255, 213);
 #page5{
     width: 100%;
     height: 100vh;
-    background-color: pink;
+    
 }
 
 
